# rust_project

./: AI_PROMPT_JOURNAL.md  Cargo.toml  PROJECT_SUMMARY.md  QUICKREF.md  README.md  SUBMISSION_CHECKLIST.md  TOOLKIT.md  package-lock.json
examples/: data_types.rs  hello_world.rs  user_input.rs
src/: main.rs
